--- a/info.yaml
+++ b/info.yaml
@@ -6,9 +6,14 @@ project:
 # If using an HDL, set wokwi_id as 0 and uncomment and list your source files here. 
 # Source files must be in ./src and you must list each source file separately
   source_files:        
-    - counter.v
-    - decoder.v
-  top_module:  "seven_segment_seconds"      # put the name of your top module here, make it unique by prepending your github username
+    - top.v
+    - decode.v
+    - mux.v
+    - add.v
+    - sub.v
+    - xor.v
+    - movAndBranch.v
+  top_module:  "HiddenRoom_HiddenCPU"      # put the name of your top module here, make it unique by prepending your github username
 
 # Keep a track of the submission yaml
 yaml_version: 3.0
@@ -32,28 +37,28 @@ documentation:
 
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
   how_to_test:  |
-      After reset, the counter should increase by one every second.
+      After reset, registers will initialize, in order of ascending address, to 00000000b, 00000001b, 00000010b, 00000011b
 
 # A description of what the inputs do
   inputs:               
     - clock
     - reset
-    - none
-    - none
-    - none
-    - none
-    - none
-    - none
+    - opcode bit zero
+    - opcode bit one
+    - result reg address bit zero
+    - result reg address bit one
+    - non result operand reg address bit zero
+    - non result operand reg address bit one
 # A description of what the outputs do
   outputs:
-    - segment a
-    - segment b
-    - segment c
-    - segment d
-    - segment e
-    - segment f
-    - segment g
-    - slow clock output
+    - bit zero of hardwired output reg number at address 11b
+    - bit one of hardwired output reg number at address 11b
+    - bit two of hardwired output reg number at address 11b
+    - bit three of hardwired output reg number at address 11b
+    - bit four of hardwired output reg number at address 11b
+    - bit five of hardwired output reg number at address 11b
+    - bit six of hardwired output reg number at address 11b
+    - bit seven of hardwired output reg number at address 11b
 
 # The following fields are optional
   tag:          "risc, microprocessor, alu"      # comma separated list of tags: test encryption, experiment, clock, animation, utility, industrial, pwm, fpga, alu, microprocessor, risc, riscv, sensor, signal generator, fft, filter, music, bcd, sound, serial, timer, random number generator, calculator, decoder, counter, puzzle, multiplier, game, oscillator,
